paintShop: view: fixed the center section stretching too far.

--- a/frontend/app/paintShop/assets/main.css
+++ b/frontend/app/paintShop/assets/main.css
@@ -65,7 +65,6 @@
 .paintShop-center {
   flex: 1 1 auto;
   margin: 0 20px;
-  width: auto;
 }
 .paintShop-right {
   width: 480px;
